# ordinox-ecdsa

./: .gitignore  Cargo.toml  README.md  dfx.json  go.mod  go.sum  main_test.go  package-lock.json  package.json  tecdsa_test.go
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/ecdsa_example_rust/: constructor.old.did  ecdsa_example_rust.wasm  index.js
.dfx/local/canisters/ordinox_ecdsa/: index.js  ordinox_ecdsa.wasm  service.did.d.ts  service.did.js
client/: client.go  consts.go  evm.go  go.mod  sig_verify.go  tecdsa_test.go
contracts/: Router.sol
src/ecdsa_example_rust/: Cargo.toml
src/ecdsa_example_rust/src/: evm.rs  lib.rs  state.rs
src/ecdsa_example_rust/tests/: tests.rs
src/ordinox_ecdsa/: Cargo.toml
src/ordinox_ecdsa/src/: evm.rs  lib.rs  state.rs
test/: ordinox-ecdsa.ts
