[package]
name = "ordinox_ecdsa"
version = "0.1.0"
authors = ["ash@ordinox.xyz"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dev-dependencies]
ic-agent = "0.37.1"
tokio = { version = "1.0", features = ["full"] }

[dependencies]
serde = "1"
candid = "0.10"
ic-cdk = "0.16"
hex = "0.4.3"
sha2 = "0.10.6"
k256 = { version = "0.13.3", features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }
alloy = { git = "https://github.com/ic-alloy/ic-alloy.git", default-features = false, branch = "icp", features = ["signer-icp"]}
ic-evm-utils = "3.2.0"
ic-cdk-timers = "0.10.0"
